--- a/3-about.html
+++ b/3-about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "About"
-description: "无话可说"
+description: "蓝星茶馆"
 header-img: "img/post-bg-rwd.jpg"
 ---
 
@@ -15,7 +15,7 @@ header-img: "img/post-bg-rwd.jpg"
 <div class="zh post-container">
 
     <!--copied from markdown -->
-    <blockquote><p>冰冻三尺 非一日之寒<br>
+    <blockquote><p>梦想比现实更有趣<br>
 
     
 </div>
@@ -85,8 +85,8 @@ header-img: "img/post-bg-rwd.jpg"
 <!-- Gitalk 评论 start  -->
 {% if site.gitalk.enable %}
 <!-- Gitalk link  -->
-<link rel="stylesheet" href="https://unpkg.com/gitalk/dist/gitalk.css">
-<script src="https://unpkg.com/gitalk@latest/dist/gitalk.min.js"></script>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.css">
+<script src="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.min.js"></script>
 
 <div id="gitalk-container"></div>
     <script type="text/javascript">
