--- a/3-about.html
+++ b/3-about.html
@@ -15,7 +15,7 @@ header-img: "img/post-bg-rwd.jpg"
 <div class="zh post-container">
 
     <!--copied from markdown -->
-    <blockquote><p>梦想比现实更有趣<br>
+    <blockquote><p>梦想更有趣<br>
 
     
 </div>
